<resources>
    <string name="app_name">LocationFinder</string>
    <string name="txtLocation">shows longitude : latitude</string>
    <string name="etPassword">********</string>
    <string name="etName">Name</string>
    <string name="etUsername">Username</string>
    <string name="etEmail">example@domain.com</string>
    <string name="btnRegister">Register</string>
    <string name="etUserLogin">Name</string>
    <string name="btnLogin">Login</string>
    <string name="etRegLink">Don\'t have an account? Create one</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="searchLocation">Search your Location</string>
    <string name="btnGotoMarker">Go to my location</string>
    <string name="btnSend">Send</string>
    <string name="search_loc">Search location</string>
    <string name="etMessag">Name</string>
    <string name="strBlocked">Blocked</string>
    <string name="strSlow">Slow Pace</string>
    <string name="strNormal">Normal</string>
    <string name="strLow">Speedy</string>
    <string name="strNone">No Traffic</string>
    <string name="strQuestion">How is traffic ahead?</string>
    <string name="btnCapture">Capture</string>
    <string name="btnFlash">flash</string>
    <string name="btnRecord">Record</string>
    <string name="btnStop">stop</string>
    <string name="tglRecord">Switch to record audio</string>
    <string name="txtRequired">All fields are required!</string>
    <string name="strSituation">Situation</string>
    <string name="title_activity_search_places">SearchPlacesActivity</string>
    <string name="tvDrivezy">DriveZy</string>
    <string name="tvsignUp">Sign up</string>
    <string name="strVoiceUpdate">Send a voice update</string>
    <string name="strAudioTimer">00:30</string>
</resources>
