<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.nuces.ateebahmed.locationfinder.RegisterActivity"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/tvsignUp"
            android:textSize="@dimen/material_design_text_size_display2"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextSecondary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical|start"
                android:hint="@string/etName"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="@dimen/material_design_text_field_padding"
                android:paddingTop="@dimen/material_design_text_field_padding"
                android:textColor="@color/colorTextPrimary"
                android:textColorLink="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextSecondary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical|start"
                android:hint="@string/etUsername"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="@dimen/material_design_text_field_padding"
                android:paddingTop="@dimen/material_design_text_field_padding"
                android:textColorLink="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilEmail"
            android:textColorHint="@color/colorTextSecondary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical|start"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/material_design_text_field_padding"
                android:paddingTop="@dimen/material_design_text_field_padding"
                android:textColorLink="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPassword"
            android:textColorHint="@color/colorTextSecondary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical|start"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/material_design_text_field_padding"
                android:paddingTop="@dimen/material_design_text_field_padding"
                android:textColorLink="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:text="@string/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:padding="@dimen/material_design_button_padding"
            android:layout_marginTop="@dimen/material_design_button_margin"
            android:layout_marginBottom="@dimen/material_design_button_margin"
            android:textColor="@color/colorPrimary"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/material_design_text_size_sub_heading"
            android:text="@string/txtRequired"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/colorTextSecondary"/>

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>