<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.nuces.ateebahmed.locationfinder.SignInActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDrivezy"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textColorLink="@color/colorTextPrimary"
        android:textSize="@dimen/material_design_text_size_display3" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTextSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:hint="@string/etUsername"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="@dimen/material_design_text_field_padding"
            android:paddingTop="@dimen/material_design_text_field_padding"
            android:textColor="@color/colorTextPrimary"
            android:textColorLink="@color/colorTextPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTextSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/material_design_text_field_padding"
            android:paddingTop="@dimen/material_design_text_field_padding"
            android:textColor="@color/colorTextPrimary"
            android:textColorLink="@color/colorTextPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:text="@string/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/material_design_button_padding"
        android:layout_marginBottom="@dimen/material_design_button_margin"
        android:layout_marginTop="@dimen/material_design_button_margin"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/regLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/etRegLink"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textColorLink="@color/colorPrimaryLight"
        android:textSize="@dimen/material_design_text_size_sub_heading" />

</android.support.v7.widget.LinearLayoutCompat>
